--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,5 +1,6 @@
 :root {
   --color-text: #dcdcef;
+  --color-text-secondary: #b3b3b3;
   --color-background: #282828;
   --color-primary: #9595e6;
   --color-secondary: #131386;
